# Course_Companion_FTE_Hackathon-IV

./: .gitignore  CLAUDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETION_CERTIFICATE.md  PHASE_SUMMARY.md  PROJECT_STATUS.md  QWEN.md  README.md  VALIDATION_CHECKLIST.md  last_session.txt  render.yaml  separate_phases.sh  validate_implementation.py
backend-full/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  mcp-config.json  pyproject.toml  render.yaml  requirements.txt
backend-full/dapr/: config.yaml
backend-full/dapr/components/: pubsub.yaml
backend-full/skills/: README.md  TEMPLATE.md  quiz-master.md
backend-full/src/: main.py
backend-full/src/api/: a2a.py  auth.py  content.py  dashboard.py  hybrid_intelligence.py  mcp.py  oauth.py  quiz.py
backend-full/src/core/: a2a.py  agents.py  claude_agents.py  config.py  events.py  llm_client.py  security.py  workflows.py
backend-full/src/models/: hybrid_intelligence.py  quiz.py
backend-full/src/services/: __init__.py  hybrid_intelligence_service.py  quiz_service.py
backend-full/tests/integration/: test_main.py
backend-phase1-zero-backend-llm/: .dockerignore  .gitignore  README.md  docker-compose.yml  railway.toml  requirements.txt  seed_data.py
chatgpt-app/: README.md  gpt-instructions.md  openapi-actions.yaml
docs/: architecture-diagram.html  cost-analysis.md  demo-video-script.md  last_session.md
frontend-web/: .env.example  .eslintrc.json  .gitignore  README.md  jest.config.js  jest.setup.ts  last_session.md  next.config.js  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+203 files in other folders)
